7_18_HW7_fix